{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 146,
  "lineage": "47d8848a-2bac-12c3-00b3-6ed20766c9e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:789672504113:loadbalancer/app/dev-myapp-alb/598c01d0544f55a6",
            "arn_suffix": "app/dev-myapp-alb/598c01d0544f55a6",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-myapp-alb-1769438499.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:789672504113:loadbalancer/app/dev-myapp-alb/598c01d0544f55a6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-myapp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-001a077c6ca1cc4f3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01d0431972baa6681"
              },
              {
                "subnet_id": "subnet-0d4a9349d21930da7"
              }
            ],
            "subnets": [
              "subnet-01d0431972baa6681",
              "subnet-0d4a9349d21930da7"
            ],
            "vpc_id": "vpc-0c800e0b1ea1449d9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "load_balancer_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:789672504113:listener/app/dev-myapp-alb/598c01d0544f55a6/0337f1f4b4401be3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:789672504113:targetgroup/dev-myapp-alb-target-group/30c65607e295b2b0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:789672504113:listener/app/dev-myapp-alb/598c01d0544f55a6/0337f1f4b4401be3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:789672504113:loadbalancer/app/dev-myapp-alb/598c01d0544f55a6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.alb_target_group",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:789672504113:targetgroup/dev-myapp-alb-target-group/30c65607e295b2b0",
            "arn_suffix": "targetgroup/dev-myapp-alb-target-group/30c65607e295b2b0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:789672504113:targetgroup/dev-myapp-alb-target-group/30c65607e295b2b0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-myapp-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c800e0b1ea1449d9"
          },
          "dependencies": [
            "aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09909d3790fba7999",
            "association_id": "eipassoc-02d4aa4cb0602b491",
            "domain": "vpc",
            "id": "eipalloc-09909d3790fba7999",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03443e315ec8f04da",
            "private_dns": "ip-172-17-2-140.ec2.internal",
            "private_ip": "172.17.2.140",
            "public_dns": "ec2-54-146-85-134.compute-1.amazonaws.com",
            "public_ip": "54.146.85.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-myapp-nat-gateway-eip-0"
            },
            "tags_all": {
              "Name": "dev-myapp-nat-gateway-eip-0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.main_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a191646e86440d23",
            "association_id": "eipassoc-0282f29721b9d7c56",
            "domain": "vpc",
            "id": "eipalloc-0a191646e86440d23",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0600088b6c96acda1",
            "private_dns": "ip-172-17-3-72.ec2.internal",
            "private_ip": "172.17.3.72",
            "public_dns": "ec2-44-213-192-109.compute-1.amazonaws.com",
            "public_ip": "44.213.192.109",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-myapp-nat-gateway-eip-1"
            },
            "tags_all": {
              "Name": "dev-myapp-nat-gateway-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789672504113:internet-gateway/igw-01df7cf9920a79dd4",
            "id": "igw-01df7cf9920a79dd4",
            "owner_id": "789672504113",
            "tags": {
              "Name": "dev-myapp-igw"
            },
            "tags_all": {
              "Name": "dev-myapp-igw"
            },
            "vpc_id": "vpc-0c800e0b1ea1449d9"
          },
          "dependencies": [
            "aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09909d3790fba7999",
            "association_id": "eipassoc-02d4aa4cb0602b491",
            "connectivity_type": "public",
            "id": "nat-0dd9e3080e8496040",
            "network_interface_id": "eni-03443e315ec8f04da",
            "private_ip": "172.17.2.140",
            "public_ip": "54.146.85.134",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01d0431972baa6681",
            "tags": {
              "Name": "dev-myapp-nat-gateway-0"
            },
            "tags_all": {
              "Name": "dev-myapp-nat-gateway-0"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a191646e86440d23",
            "association_id": "eipassoc-0282f29721b9d7c56",
            "connectivity_type": "public",
            "id": "nat-09605a29e93adbf5d",
            "network_interface_id": "eni-0600088b6c96acda1",
            "private_ip": "172.17.3.72",
            "public_ip": "44.213.192.109",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d4a9349d21930da7",
            "tags": {
              "Name": "dev-myapp-nat-gateway-1"
            },
            "tags_all": {
              "Name": "dev-myapp-nat-gateway-1"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01df7cf9920a79dd4",
            "id": "r-rtb-0bbf8a5fa3b59d7ea1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bbf8a5fa3b59d7ea",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789672504113:route-table/rtb-04241a53a1808de50",
            "id": "rtb-04241a53a1808de50",
            "owner_id": "789672504113",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dd9e3080e8496040",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-myapp-nat-gateway-route-table-0"
            },
            "tags_all": {
              "Name": "dev-myapp-nat-gateway-route-table-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c800e0b1ea1449d9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789672504113:route-table/rtb-0de090fcbf532fbbe",
            "id": "rtb-0de090fcbf532fbbe",
            "owner_id": "789672504113",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09605a29e93adbf5d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-myapp-nat-gateway-route-table-1"
            },
            "tags_all": {
              "Name": "dev-myapp-nat-gateway-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c800e0b1ea1449d9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbe3fa3751556c16",
            "route_table_id": "rtb-04241a53a1808de50",
            "subnet_id": "subnet-0379081b063e67bda"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e68ebc32ef24025a",
            "route_table_id": "rtb-0de090fcbf532fbbe",
            "subnet_id": "subnet-062cfaadf556736ae"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789672504113:security-group/sg-0334a7e1236f27640",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0334a7e1236f27640",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001a077c6ca1cc4f3"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-myapp-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "789672504113",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c800e0b1ea1449d9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_sg",
            "aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789672504113:security-group/sg-001a077c6ca1cc4f3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001a077c6ca1cc4f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-myapp-alb-sg",
            "name_prefix": "",
            "owner_id": "789672504113",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c800e0b1ea1449d9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789672504113:subnet/subnet-0379081b063e67bda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.17.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0379081b063e67bda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "789672504113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-myapp-private-subnet-0"
            },
            "tags_all": {
              "Name": "dev-myapp-private-subnet-0"
            },
            "vpc_id": "vpc-0c800e0b1ea1449d9"
          },
          "dependencies": [
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789672504113:subnet/subnet-062cfaadf556736ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062cfaadf556736ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "789672504113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-myapp-private-subnet-1"
            },
            "tags_all": {
              "Name": "dev-myapp-private-subnet-1"
            },
            "vpc_id": "vpc-0c800e0b1ea1449d9"
          },
          "dependencies": [
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789672504113:subnet/subnet-01d0431972baa6681",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d0431972baa6681",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "789672504113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-myapp-public-subnet-0"
            },
            "tags_all": {
              "Name": "dev-myapp-public-subnet-0"
            },
            "vpc_id": "vpc-0c800e0b1ea1449d9"
          },
          "dependencies": [
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789672504113:subnet/subnet-0d4a9349d21930da7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.17.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4a9349d21930da7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "789672504113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-myapp-public-subnet-1"
            },
            "tags_all": {
              "Name": "dev-myapp-public-subnet-1"
            },
            "vpc_id": "vpc-0c800e0b1ea1449d9"
          },
          "dependencies": [
            "aws_vpc.main_network",
            "data.aws_availability_zones.available_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789672504113:vpc/vpc-0c800e0b1ea1449d9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0b6fae0c0f9c0b2b0",
            "default_route_table_id": "rtb-0bbf8a5fa3b59d7ea",
            "default_security_group_id": "sg-03a88da128dc0e834",
            "dhcp_options_id": "dopt-a69d82dd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c800e0b1ea1449d9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bbf8a5fa3b59d7ea",
            "owner_id": "789672504113",
            "tags": {
              "Name": "dev-myapp-vpc"
            },
            "tags_all": {
              "Name": "dev-myapp-vpc"
            }
          }
        }
      ]
    }
  ]
}